data/all_generated_tests/raw_wast_tests/nop_ImproperFunctionCallorReturnHandling_625.wast
;; 6. Formulate a differential test where a `nop` precedes a function that calls another function indirectly via a `call_indirect`. Verify that the correct function is called and the return value is correct, ensuring no stack or state corruption due to the `nop`.

(assert_invalid
  (module 
    (type $t0 (func (result i32)))
    (table anyfunc (elem $f0))
    (elem (i32.const 0) $f0)
    (func $f0 (result i32) (nop) (i32.const 42))
    (func (result i32) (nop) (call_indirect (type $t0) (i32.const 0)))
  )
  "type mismatch"
)